8625: add lambda adapters to monolambda
